@@ -39,11 +39,13 @@ class ExaminationAuditReportController extends com.rameses.gov.etracs.rpt.report
     def formControl = [
         getFormControls: {
             return [
-                new FormControl( "integer", [caption:'Year', name:'entity.year', required:true, preferredSize:'100,19']),
-                new FormControl( "combo", [caption:'Quarter', name:'entity.qtr', items:'quarters', required:true, immediate:true, preferredSize:'100,19']),
-                new FormControl( "combo", [caption:'Month', name:'entity.month', items:'months', depends:'entity.qtr', expression:'#{item.name}', dynamic:true, preferredSize:'100,19', allowNull:false, required:true]),
-                new FormControl( "combo", [caption:'Day', name:'entity.day', items:'days', dynamic:true, depends:['entity.month'] as String[], immediate:true, preferredSize:'100,19', emptyText:'ALL']),
-                new FormControl( "combo", [caption:'User', name:'entity.user', items:'users', dynamic:true, expression:'#{item.name}', preferredSize:'250,19']),
+                new FormControl( "combo", [captionWidth:100, caption:'LGU', name:'entity.lgu', items:'lgus', expression:'#{item.name}', emptyText:'ALL', allowNull:true]),
+                new FormControl( "combo", [captionWidth:100, caption:'Barangay', name:'entity.barangay', items:'barangays', expression:'#{item.name}', depends:'entity.lgu', dynamic:true, preferredSize:'0,21', emptyText:'ALL']),
+                new FormControl( "integer", [captionWidth:100, caption:'Year', name:'entity.year', required:true, preferredSize:'100,19']),
+                new FormControl( "combo", [captionWidth:100, caption:'Quarter', name:'entity.qtr', items:'quarters', required:true, immediate:true, preferredSize:'100,19']),
+                new FormControl( "combo", [captionWidth:100, caption:'Month', name:'entity.month', items:'months', depends:'entity.qtr', expression:'#{item.name}', dynamic:true, preferredSize:'100,19', allowNull:false, required:true]),
+                new FormControl( "combo", [captionWidth:100, caption:'Day', name:'entity.day', items:'days', dynamic:true, depends:['entity.month'] as String[], immediate:true, preferredSize:'100,19', emptyText:'ALL']),
+                new FormControl( "combo", [captionWidth:100, caption:'User', name:'entity.user', items:'users', dynamic:true, expression:'#{item.name}', preferredSize:'250,19']),
             ]    
         },
    ] as FormPanelModel;
