@@ -8,3 +8,4 @@ Assessor
 	- Subdivision: cancel improvement: support modification and access to cancellation reports
 	- Machinery: report: deconstruct machine smv params as fields
 	- TD: report: add prevtaxability info
+	- Report: Property Examination/Audit: add lgu and baranga filter
